--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Header */
 header {
-  background: #222;
+  background: #1f2b3d;
   color: #fff;
   padding: 1.5rem;
   text-align: center;
@@ -70,7 +70,7 @@ a:hover {
 footer {
   text-align: center;
   padding: 1rem;
-  background: #222;
+  background: #1f2b3d;
   color: white;
   margin-top: 30px;
   font-size: 0.9rem;
